v0.1:
    - Initial version.

v0.1.1:
    - Added sprite initial facing fix.

v0.1.2:
    - Added compatibility with "Individual Dragon Coins Save" patch.
    - Added "load_title" routine in "retry_config/extra.asm".
    - Added "docs/sram_info.txt".

v0.1.3:
    - Fixed bug where the prompt options wouldn't appear when dying while the level end circle was active (thanks Sweetdude for finding this in the old retry patch).
    - Added !ram_prompt_override, that can be used to override the current level's prompt settings on the fly.
    - Added "docs/ram_map.txt".

v0.1.4:
    - Added !ram_disable_exit to remove the exit option on the fly (thanks Sweetdude and Abdu for the suggestion).

v0.1.5:
    - Added !ram_set_checkpoint to make Retry easily compatible with custom midway blocks/sprites.
    - Updated documentation.

v0.1.6:
    - Fixed room checkpoints respawning the player in the wrong sublevel sometimes (thanks FYRE150 for reporting this).
    - Fixed graphical glitches in some of the mode 7 vanilla bosses when the prompt was active.
    - Fixed error on SA-1 that made respawning in midway entrances not work correctly.
    - Fixed error where the midway bar for the current sublevel would respawn when leaving the current level, entering another one then going back to that sublevel (thanks FYRE150 for reporting this).
    - Added fix from original Retry involving secondary exits and "No Yoshi" intros.