@@ -39,7 +39,7 @@ endif
 !ram_prompt_override = !freeram+$0F ; 1
 !ram_disable_exit    = !freeram+$10 ; 1
 !ram_set_checkpoint  = !freeram+$11 ; 2
-!ram_reserved        = !freeram+$13 ; 14 (reserved for future expansion)
+!ram_reserved        = !freeram+$13 ; 13 (reserved for future expansion)
 !ram_checkpoint      = !freeram+$20 ; 192
 !ram_death_counter   = !freeram+$E0 ; 5
 !ram_cust_obj_data   = !freeram+$E5 ; 1+(!max_custom_midway_num*4)
