@@ -80,18 +80,20 @@ Now for the actual RAM addresses (names are prefixed with "!ram_" in ram.asm, an
 ;                 ;         ;       ; and also on overworld load. You can also change it at   ;
 ;                 ;         ;       ; any time to remove the option in certain situations.    ;
 ;=============================================================================================;
-; set_checkpoint  ;   $11   ;  $02  ; If the first byte is set to any value other than $FF,   ;
+; set_checkpoint  ;   $11   ;  $02  ; If the low byte is set to any value other than $FF,     ;
 ;                 ;         ;       ; it will trigger a checkpoint according to the checkpoint;
 ;                 ;         ;       ; table. Alternatively, you can set the whole 16-bit      ;
 ;                 ;         ;       ; address to an entrance value to trigger a checkpoint    ;
 ;                 ;         ;       ; that will take you to that entrance (a-la custom midway ;
 ;                 ;         ;       ; object). For the entrance format, see $7E19B8/$7E19D8 in;
 ;                 ;         ;       ; the SMWCentral RAM Map.                                 ;
+;                 ;         ;       ; Additionally, setting the low byte to the special value ;
+;                 ;         ;       ; $80 will reset the current level's checkpoint.          ;
 ;                 ;         ;       ; This can be used to integrate custom midway blocks/     ;
 ;                 ;         ;       ; sprites with retry's multiple midway system. For more   ;
-;                 ;         ;       ; info, see "docs/FAQ.txt".                               ;
+;                 ;         ;       ; info, see "docs/troubleshooting.txt".                   ;
 ;=============================================================================================;
-; reserved        ;   $13   ;  $0E  ; Unused, but reserved for future expansion.              ;
+; reserved        ;   $13   ;  $0D  ; Unused, but reserved for future expansion.              ;
 ;                 ;         ;       ; Usage as free ram is not recommended.                   ;
 ;=============================================================================================;
 ; checkpoint      ;   $20   ;  $C0  ; Checkpoint data for each level (2 bytes per level).     ;
