@@ -37,8 +37,8 @@ Additionally, if you just patched the "Remove Status Bar" patch, rerun UberASM T
 --------------------------------------------------------------------------------
 
 Q: I use a custom midway block/sprite, but it doesn't seem to work!
-A: By default Retry only works with the vanilla midway tile, but it's fairly straightforward to make it work with your own blocks/sprites. Retry has a specific RAM address that can be used to set the midway in the current level (according to the "checkpoint" table in "retry_config/tables.asm"). The address is !ram_set_checkpoint (to see the actual value look in "retry_config/ram.asm" and "docs/ram_map.txt").
-The system works as follows: if you set the first byte (!ram_set_checkpoint) to something other than $FF, it will trigger the current level's midway. If the checkpoint table for this sublevel is $00, it means it will give you the midway for the main level. While if it's $02 or $03, it will give you the midway for the current sublevel.
+A: By default Retry only works with the vanilla midway tile, but it's fairly straightforward to make it work with your own blocks/sprites. Retry has a specific RAM address that can be used to set the midway in the current level (according to the "checkpoint" table in "retry_config/tables.asm"). The address is !ram_set_checkpoint: to have it always available in sprites/blocks, you can copy the contents of "ram.asm" into PIXI's "asm/sa1def.asm" and GPS's "defines.asm" (UberASM Tool already includes them).
+The system works as follows: if you set the low byte (!ram_set_checkpoint) to #$00, it will trigger the current level's midway. If the checkpoint table for this sublevel is $00, it means it will give you the midway for the main level. While if it's $02 or $03, it will give you the midway for the current sublevel.
 You can also set a completely custom entrance for the checkpoint, similarly to how Retry's custom midway objects work. To do this, you need to set the entire 16 bit address (!ram_set_checkpoint and !ram_set_checkpoint+1) to the entrance value you want to use. This value follows the format of $7E19B8 and $7E19D8 (where $7E19B8 should go in the first byte of the address, $7E19D8 in the second). For more info, check those addresses in SMWCentral's RAM Map.
 In practice, your midway block sprite should have a piece of code like this, to set the vanilla midway:
 
@@ -48,15 +48,17 @@ In practice, your midway block sprite should have a piece of code like this, to 
 To add multiple midway support, you'd just need to add this after it:
 	
 	LDA #$00
-	STA $7FB411	; $40C011 on SA-1.
+	STA !ram_set_checkpoint
 
 To make the midway take you to an arbitrary entrance, you need to set a different value depending on what entrance it is. For example, to make it use secondary exit number $0169, you'd use this code:
 
 	REP #$20
 	LDA #$0169	; Secondary exit number.
 	ORA #$0200	; Set the "secondary exit" bit in the high byte (like $7E19D8).
-	STA $7FB411	; $40C011 on SA-1.
+	STA !ram_set_checkpoint
 	SEP #$20
+
+Additionally, you can also reset the current level's checkpoint by setting !ram_set_checkpoint to #$80. This will respawn Mario in the current level's main entrance when dying.
 
 Note 1: if !save_on_checkpoint = 1, using this method will also make the game save.
 Note 2: if using the "Individual Dragon Coins Save" patch, using this method will also make the current Dragon Coins save (when !Midpoint = 1 in that patch).
